[package]
name = "smoluau"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
mlua = {version = "0.10.0", features = ["luau", "async", "serialize"]}
regex = "1.11.1"
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
ureq = { version = "3.0.0-rc2", features = ["json", "rustls", "gzip"]}
