[package]
name = "seal"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
mlua = {version = "0.10.1", features = ["luau", "serialize"]}
regex = "1.11.1"
ureq = { version = "3.0.0-rc2", features = ["json", "rustls", "gzip"]}
libc = { version = "0.2" }
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
base64 = { version = "0.13.0" }
serde_yaml = "0.9.21"
toml = "0.5.9"
serde-xml-rs = "0.5.1"
