[package]
name = "seal"
version = "0.0.4"
edition = "2021"

[dependencies]
mlua = {version = "0.10.2", features = ["luau", "serialize"]}
chrono = "0.4.38"
regex = "1.11.1"
include_dir = { version = "0.7.4" }
ureq = { version = "3.0.0-rc2", features = ["json", "rustls", "gzip"] }
crossbeam-channel ={ version = "^0.5.13" }
serde_json_lenient = { version = "0.2.3", features = ["arbitrary_precision", "preserve_order"] }
base64 = { version = "0.13.0" }
serde_yaml = "0.9.21"
toml = "0.5.9"
serde-xml-rs = "0.5.1"
copy_dir = "0.1.3"
ring = "0.17.8"
rsa = "0.9.7"
rand = "0.8.5"
simple_crypt = "0.2.3"
hex = "0.4.3"

[profile.dev.package.num-bigint-dig]
opt-level = 3 # otherwise rsa keygen takes forever
